syntax = "proto3";

package message;

import "message/common.proto";

option go_package = "github.com/afairon/smeter/internal/message";

message Humidity {
    int64 Time = 1;
    int64 SensorID = 2;
    double Value = 3;
}

message HumidityRequest {
    int64 SensorID = 1;
    int64 From = 2;
    int64 To = 3;
    Bucket Bucket = 4;
}
