syntax = "proto3";

package service;

import "message/humidity.proto";

// HumidityService definition
service HumidityService{
    rpc Add(message.Humidity) returns (message.Humidity);
    rpc GetHumidity(message.HumidityRequest) returns (stream message.Humidity);
    rpc GetAvgHumidity(message.HumidityRequest) returns (stream message.Humidity);
}
